fix the padding and spacing attempt 3, logo in the footer, new favicon with cache busting

--- a/_sass/navbar.scss
+++ b/_sass/navbar.scss
@@ -1,24 +1,23 @@
 .navbar-brand {
-  padding: 7px 15px 7px 10%;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
+  padding: 7px 15px 7px 75px;
 
   @include media-breakpoint-down(md) {
-    padding-left: 15px;
+    padding-left: 7px;
   }
 }
 
-.collapse.navbar-collapse {
-  flex-grow: 0;
-}
-
 .navbar-links {
-  padding: 3px 20% 3px 15px;
   border-top-left-radius: 15px;
   border-bottom-left-radius: 15px;
-  flex: 1 1 auto;
+  padding: 2px 75px 2px 2px;
 
   @include media-breakpoint-down(md) {
-    padding-right: 15px;
+    padding-right: 2px;
+  }
+
+  @include media-breakpoint-down(sm) {
+    padding-left: 20px;
   }
 }
